# trading-bot

./: .env.example  .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
examples/: quickstart.ipynb
tests/: test_backtest_engine.py  test_cli.py  test_config.py  test_indicators.py  test_polygon_source.py  test_strategies.py
trading_bot/: __init__.py  cli.py  config.py
trading_bot/backtest/: __init__.py  benchmark.py  engine.py  metrics.py  plotting.py  walkforward.py
trading_bot/data/: __init__.py  cache.py  polygon_source.py
trading_bot/indicators/: __init__.py  ta.py
trading_bot/live/: discord.py  signal_runtime.py  streamer.py
trading_bot/strategies/: __init__.py  base.py  breakout_vwap.py  macd_trend.py  rsi_reversion.py  sma_cross.py
